--- a/app/components/villa/villa.component.html
+++ b/app/components/villa/villa.component.html
@@ -67,8 +67,8 @@
             <div class="col-xs-6" *ngIf="loginService.getPermission('Enquiries/Post')">
                 <button type="button"
                         class="btn btn-success pull-right"
-                        data-toggle="modal" data-target="#inquiry"
-                        (click)="vote(villa)">Submit enquiry</button>
+                        data-toggle="modal" data-target="#enquiry"
+                        (click)="open(villa)">Submit enquiry</button>
             </div>
         </div>
     </div>
