--- a/app/components/villa/villa.component.html
+++ b/app/components/villa/villa.component.html
@@ -36,7 +36,7 @@
         </div>
         <div class="row">
             <div class="card-stats col-xs-12">
-                <p class="category"><i class="material-icons">place</i> {{region}}</p>
+                <p class="category"><i class="material-icons">place</i> {{villa.RegionName}}</p>
             </div>
         </div>
         <div class="row">
