--- a/app/components/form-fields/input-field/input-field.component.html
+++ b/app/components/form-fields/input-field/input-field.component.html
@@ -1,10 +1,9 @@
-<div [formGroup]="filterForm" class="form-group label-floating">
+<div class="form-group label-floating">
     <label class="control-label">{{data.title}}</label>
-    <span *ngIf="static" class="form-control-static">{{filterForm.controls[data.name].value}}</span>
+    <span *ngIf="static" class="form-control-static">{{field.value}}</span>
     <input *ngIf="!static"
            [type]="data.type"
-           [name]="data.name"
            class="form-control"
-           [formControlName]="data.name">
+           [formControl]="field">
 </div>
 
