--- a/app/pages/dashboard/dashboard.component.html
+++ b/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,8 @@
 <div class="main-content">
     <div class="container-fluid">
+        <button class="btn btn-success btn-raised" data-toggle="modal" data-target="#enquiry" (click)="openEnquiry({})">
+            Create
+        </button>
         <button class="btn btn-success btn-raised" data-toggle="modal" data-target="#proposal">
             Create a Proposal
         </button>
@@ -8,7 +11,7 @@
         </div>
         <div class="row" *ngIf="dashboardService.regions.length">
             <div class="col-lg-4 col-md-6 col-sm-6" *ngFor=" let item of dashboardService.villas; let i = index " >
-                <villa-cmp (openEnquiry)="openEnquiry($event)" [villa]="item" [region]="dashboardService.regions[item.RegionId-1].Name"></villa-cmp>
+                <villa-cmp (openEnquiry)="openEnquiry($event)" [villa]="item" ></villa-cmp>
             </div>
         </div>
     </div>
@@ -18,6 +21,7 @@
         <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
     </svg>
 </div>
+<!--
 <div class="modal fade" id="proposal" tabindex="-1" role="dialog" aria-labelledby="proposalLabel" aria-hidden="false">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -95,4 +99,5 @@
         </div>
     </div>
 </div>
+-->
 <enquiry-cmp [group]="enquiryForm" [data]="openVilla"></enquiry-cmp>
