--- a/app/components/dashboard-filter/dashboard-filter.component.html
+++ b/app/components/dashboard-filter/dashboard-filter.component.html
@@ -21,14 +21,14 @@
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
-                        <datetimepicker-field-cmp [data]="{title: 'Check In', name: 'CheckIn'}"
+                        <datetimepicker-field-cmp [data]="{title: 'Check In'}"
                                                   [classes]="{withIcon: true}"
-                                                  [group]="filterForm"></datetimepicker-field-cmp>
+                                                  [field]="filterForm.controls.CheckIn"></datetimepicker-field-cmp>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
-                        <datetimepicker-field-cmp [data]="{title: 'Check Out', name: 'CheckOut'}"
+                        <datetimepicker-field-cmp [data]="{title: 'Check Out'}"
                                                   [classes]="{withIcon: true}"
-                                                  [group]="filterForm"></datetimepicker-field-cmp>
+                                                  [field]="filterForm.controls.CheckOut"></datetimepicker-field-cmp>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
                         <input-field-cmp [data]="{title: 'Bedrooms', name: 'Bedrooms', type: 'number'}"
