--- a/app/pages/message/message.component.html
+++ b/app/pages/message/message.component.html
@@ -33,183 +33,7 @@
 
                     </div>
                     <div class="tab-pane" id="enquiries">
-                        <div class="material-datatables">
-                            <table id="datatables"
-                                   class="table table-enquiries m-t-none">
-                                <thead>
-                                    <tr>
-                                        <th></th>
-                                        <th></th>
-                                        <th></th>
-                                        <th></th>
-                                        <th></th>
-                                        <th></th>
-                                        <th></th>
-                                        <th></th>
-                                    </tr>
-                                </thead>
-                                <tfoot>
-                                    <tr>
-                                        <th></th>
-                                        <th></th>
-                                        <th></th>
-                                        <th></th>
-                                        <th></th>
-                                        <th></th>
-                                        <th></th>
-                                        <th></th>
-                                    </tr>
-                                </tfoot>
-                                <tbody>
-                                    <tr>
-                                        <td></td>
-                                        <td>
-                                            <div class="photo">
-                                                <cl-image data-u="image"
-                                                          public-id="z7iro8k17pc69cguzetw"
-                                                          cloud-name="privadia"
-                                                          class="md-card-image"
-                                                          crop="fill"
-                                                          gravity="auto"
-                                                          quality="80"
-                                                          height="32"
-                                                          width="32"
-                                                          format="jpg">
-                                                </cl-image>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            Manager Name
-                                        </td>
-                                        <td>
-                                            Villa name, Mary Johnson, 06/12/17 - 06/15/17
-                                        </td>
-                                        <td>
-                                            25 Jun 1:12 PM
-                                        </td>
-                                        <td>
-                                            <div class="enquiry-status accepted">Accepted</div>
-                                        </td>
-                                        <td class="button-cell">
-                                            <button class="btn btn-simple btn-icon">
-                                                <i class="material-icons">delete</i>
-                                            </button>
-                                        </td>
-                                        <td></td>
-                                    </tr>
-                                    <tr>
-                                        <td></td>
-                                        <td>
-                                            <div class="photo">
-                                                <cl-image data-u="image"
-                                                          public-id="z7iro8k17pc69cguzetw"
-                                                          cloud-name="privadia"
-                                                          class="md-card-image"
-                                                          crop="fill"
-                                                          gravity="auto"
-                                                          quality="80"
-                                                          height="32"
-                                                          width="32"
-                                                          format="jpg">
-                                                </cl-image>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            Manager Name
-                                        </td>
-                                        <td>
-                                            Villa name, Mary Johnson, 06/12/17 - 06/15/17
-                                        </td>
-                                        <td>
-                                            25 Jun 1:12 PM
-                                        </td>
-                                        <td>
-                                            <div class="enquiry-status accepted">Accepted</div>
-                                        </td>
-                                        <td class="button-cell">
-                                            <button class="btn btn-simple btn-icon">
-                                                <i class="material-icons">delete</i>
-                                            </button>
-                                        </td>
-                                        <td></td>
-                                    </tr>
-                                    <tr class="unread">
-                                        <td>
-                                            <span class="badge">10</span>
-                                        </td>
-                                        <td>
-                                            <div class="photo">
-                                                <cl-image data-u="image"
-                                                          public-id="z7iro8k17pc69cguzetw"
-                                                          cloud-name="privadia"
-                                                          class="md-card-image"
-                                                          crop="fill"
-                                                          gravity="auto"
-                                                          quality="80"
-                                                          height="32"
-                                                          width="32"
-                                                          format="jpg">
-                                                </cl-image>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            Manager Name
-                                        </td>
-                                        <td>
-                                            Villa name, Mary Johnson, 06/12/17 - 06/15/17
-                                        </td>
-                                        <td>
-                                            25 Jun 1:12 PM
-                                        </td>
-                                        <td>
-                                            <div class="enquiry-status"></div>
-                                        </td>
-                                        <td class="button-cell">
-                                            <button class="btn btn-simple btn-icon">
-                                                <i class="material-icons">delete</i>
-                                            </button>
-                                        </td>
-                                        <td></td>
-                                    </tr>
-                                    <tr>
-                                        <td></td>
-                                        <td>
-                                            <div class="photo">
-                                                <cl-image data-u="image"
-                                                          public-id="z7iro8k17pc69cguzetw"
-                                                          cloud-name="privadia"
-                                                          class="md-card-image"
-                                                          crop="fill"
-                                                          gravity="auto"
-                                                          quality="80"
-                                                          height="32"
-                                                          width="32"
-                                                          format="jpg">
-                                                </cl-image>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            Manager Name
-                                        </td>
-                                        <td>
-                                            Villa name, Mary Johnson, 06/12/17 - 06/15/17
-                                        </td>
-                                        <td>
-                                            25 Jun 1:12 PM
-                                        </td>
-                                        <td>
-                                            <div class="enquiry-status declined">Declined</div>
-                                        </td>
-                                        <td class="button-cell">
-                                            <button class="btn btn-simple btn-icon">
-                                                <i class="material-icons">delete</i>
-                                            </button>
-                                        </td>
-                                        <td></td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
+                        <enquiries-table-cmp [data]="enquiryService.enquiries"></enquiries-table-cmp>
                     </div>
                     <div class="tab-pane" id="bookings">
 
