added dialog component

--- a/app/pages/message/enquiry/enquiry.component.html
+++ b/app/pages/message/enquiry/enquiry.component.html
@@ -32,135 +32,7 @@
                 <div class="enquiry-detail">
                     <div class="row">
                         <div class="col-md-6">
-                            <div class="messages-container">
-                                <div class="messages-wrp">
-                                    <div class="messages">
-                                        <div class="date-line">
-                                            28 Jun 2017
-                                        </div>
-                                        <div class="message from">
-                                            <div class="message-text">
-                                                Hello! There is a request for Villa Name in Ibiza. They would like to
-                                                book
-                                                12/06/17 - 15/06/17. Please tell me if all conditions are suitable.
-                                                Thank
-                                                you.
-                                            </div>
-                                            <div class="message-date">1:38 pm</div>
-                                        </div>
-                                        <div class="message to">
-                                            <div class="message-text">
-                                                Hi! Thanks for your message, everything is fine. I’m going to approve
-                                                your
-                                                enquiry and will be waiting for payment. Thank you!
-                                            </div>
-                                            <div class="message-date pull-left">Read at 1:42 pm</div>
-                                            <div class="message-date">1:38 pm</div>
-                                        </div>
-                                        <div class="message from">
-                                            <div class="message-text">
-                                                Hello! There is a request for Villa Name in Ibiza. They would like to
-                                                book
-                                                12/06/17 - 15/06/17. Please tell me if all conditions are suitable.
-                                                Thank
-                                                you.
-                                            </div>
-                                            <div class="message-date">1:38 pm</div>
-                                        </div>
-                                        <div class="message info">
-                                            <div class="message-text">
-                                                <i class="material-icons">info_outline</i> Proposal has been updated
-                                            </div>
-                                        </div>
-                                        <div class="date-line">
-                                            28 Jun 2017
-                                        </div>
-                                        <div class="message from">
-                                            <div class="message-text">
-                                                Hello! There is a request for Villa Name in Ibiza. They would like to
-                                                book
-                                                12/06/17 - 15/06/17. Please tell me if all conditions are suitable.
-                                                Thank
-                                                you.
-                                            </div>
-                                            <div class="message-date">1:38 pm</div>
-                                        </div>
-                                        <div class="message to">
-                                            <div class="message-text">
-                                                Hi! Thanks for your message, everything is fine. I’m going to approve
-                                                your
-                                                enquiry and will be waiting for payment. Thank you!
-                                            </div>
-                                            <div class="message-date pull-left">Read at 1:42 pm</div>
-                                            <div class="message-date">1:38 pm</div>
-                                        </div>
-                                        <div class="message from">
-                                            <div class="message-text">
-                                                Hello! There is a request for Villa Name in Ibiza. They would like to
-                                                book
-                                                12/06/17 - 15/06/17. Please tell me if all conditions are suitable.
-                                                Thank
-                                                you.
-                                            </div>
-                                            <div class="message-date">1:38 pm</div>
-                                        </div>
-                                        <div class="message info">
-                                            <div class="message-text">
-                                                <i class="material-icons">info_outline</i> Proposal has been updated
-                                            </div>
-                                        </div>
-                                        <div class="date-line">
-                                            28 Jun 2017
-                                        </div>
-                                        <div class="message from">
-                                            <div class="message-text">
-                                                Hello! There is a request for Villa Name in Ibiza. They would like to
-                                                book
-                                                12/06/17 - 15/06/17. Please tell me if all conditions are suitable.
-                                                Thank
-                                                you.
-                                            </div>
-                                            <div class="message-date">1:38 pm</div>
-                                        </div>
-                                        <div class="message to">
-                                            <div class="message-text">
-                                                Hi! Thanks for your message, everything is fine. I’m going to approve
-                                                your
-                                                enquiry and will be waiting for payment. Thank you!
-                                            </div>
-                                            <div class="message-date pull-left">Read at 1:42 pm</div>
-                                            <div class="message-date">1:38 pm</div>
-                                        </div>
-                                        <div class="message from">
-                                            <div class="message-text">
-                                                Hello! There is a request for Villa Name in Ibiza. They would like to
-                                                book
-                                                12/06/17 - 15/06/17. Please tell me if all conditions are suitable.
-                                                Thank
-                                                you.
-                                            </div>
-                                            <div class="message-date">1:38 pm</div>
-                                        </div>
-                                        <div class="message info">
-                                            <div class="message-text">
-                                                <i class="material-icons">info_outline</i> Proposal has been updated
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="divider"></div>
-                                <div class="message-send">
-                                    <div class="form-group label-floating">
-                                        <label class="control-label">Type in your message</label>
-                                        <input class="form-control">
-                                    </div>
-                                    <button class="btn btn-just-icon btn-simple btn-send" data-placement="bottom"
-                                            rel="tooltip" title="Send" type="button">
-                                        <i class="material-icons">send</i>
-                                        <div class="ripple-container"></div>
-                                    </button>
-                                </div>
-                            </div>
+                            <dialog-cmp [data]="enquiryService.enquiry"></dialog-cmp>
                         </div>
                         <div class="col-md-6">
                             <div class="enquiry-header">
